Minor swagger fix
